# sdamgia-python

./: .editorconfig  .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
api/: index.html
docs/: enums.md  types.md  utils.md
docs/reference/: api.md
enums/: index.html
extra/: tweaks.css
sdamgia/: __init__.py  __main__.py  api.py  enums.py  exceptions.py  images.py  main.py  types.py  utils.py
sdamgia/exceptions/: __init__.py  exceptions.py
search/: search_index.json
types/: index.html
utils/: index.html
