[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sdamgia"
version = "0.1.0"
description = "Unofficial API for SdamGIA educational portal for exam preparation."
authors = ["Динаzavr <dinaprk@cumallover.me>", "loneinheart <loneinheart@tfwno.gf>"]
license = "LGPLv3+"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
selectolax = "^0.3.21"
pillow = "^10.2.0"
cairosvg = "^2.7.0"

[tool.poetry.extras]
pix2tex = ["pix2tex"]

[tool.poetry.dependencies.pix2tex]
optional = true
version = "^0.1.2"
extras = ["cli"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
mypy = "^1.8.0"
types-pillow = "^10.2.0"

[tool.ruff]
target-version = "py310"
line-length = 99
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "S", # flake8-bandit
    "D", # pydocstyle
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "PLC", # pylint conventions
    "PLE", # pylint errors
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "YTT", # flake8-2020
    "DTZ", # flake8-datetimez
]
ignore = [
    "S603", # subprocess-without-shell-equals-true
    "D100", # undocumented-public-module
    "D104", # undocumented-public-package
    "D105", # undocumented-magic-method
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
]

[[tool.mypy.overrides]]
module = "pix2tex.*,cairosvg.*"
ignore_missing_imports = true
