[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sdamgia"
version = "0.1.0"
description = "Unofficial API for SdamGIA educational portal for exam preparation."
authors = ["Динаzavr <dinaprk@cumallover.me>", "loneinheart <loneinheart@tfwno.gf>"]
license = "LGPLv3+"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.5"
selectolax = "^0.3.21"
pillow = "^10.2.0"
cairosvg = "^2.7.0"

pix2tex = { version = "^0.1.2", extras = ["cli"], optional = true }

[tool.poetry.extras]
pix2tex = ["pix2tex"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
mypy = "^1.8.0"
types-pillow = "^10.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.23"
mkdocstrings = { version = "^0.25.1", extras = ["python"] }

[tool.ruff]
target-version = "py310"
line-length = 99
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "S", # flake8-bandit
    "D", # pydocstyle
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "PLC", # pylint conventions
    "PLE", # pylint errors
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "YTT", # flake8-2020
    "DTZ", # flake8-datetimez
]
ignore = [
    "S603", # subprocess-without-shell-equals-true
    "D100", # undocumented-public-module
    "D104", # undocumented-public-package
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
exclude = [
    ".git",
    ".venv",
    ".idea",
    ".tests",
    ".cache",
    "build",
    "dist",
    "scripts",
]

[[tool.mypy.overrides]]
module = ["pix2tex.*", "cairosvg.*"]
ignore_missing_imports = true
